--- a/data/myReference.bib
+++ b/data/myReference.bib
@@ -714,5 +714,129 @@ author = "The ALEP Collaboration"
       reportNumber  = "CMS-PAS-PFT-09-001",
       url           = "http://cds.cern.ch/record/1194487",
 }
+@article{Acquistapace:1997fm,
+      author         = "Acquistapace, G. and others",
+      title          = "{CMS, the magnet project: Technical design report}",
+      collaboration  = "CMS",
+      year           = "1997",
+      reportNumber   = "CERN-LHCC-97-10",
+      SLACcitation   = "%%CITATION = CERN-LHCC-97-10;%%"
+}
+@article{trackeradd,
+author = {collaboration, CMS},
+year = {2000},
+month = {01},
+pages = {},
+title = {The CMS tracker: addendum to the technical design report},
+volume = {16},
+journal = {CERN/LHCC}
+}
 
+@article{Sirunyan_2017,
+  doi = {10.1088/1748-0221/12/10/p10003},
+  url = {https://doi.org/10.1088%2F1748-0221%2F12%2F10%2Fp10003},
+  year = 2017,
+  month = {oct},
+  publisher = {{IOP} Publishing},
+  volume = {12},
+  number = {10},
+  pages = {P10003--P10003},
+  author = {The CMS Collaboration},
+  title = {Particle-flow reconstruction and global event description with the {CMS} detector},
+  journal = {Journal of Instrumentation},
+}
+@book{CERN-LHCC-97-033,
+      title         = "{The CMS electromagnetic calorimeter project: Technical
+                       Design Report}",
+      publisher     = "CERN",
+      collaboration = "CMS Collaboration",
+      address       = "Geneva",
+      series        = "Technical Design Report CMS",
+      year          = "1997",
+      reportNumber  = "CERN-LHCC-97-033",
+      url           = "https://cds.cern.ch/record/349375",
+}
+
+@article{Ingram_2007,
+  doi = {10.1088/1748-0221/2/04/p04004},
+  url = {https://doi.org/10.1088%2F1748-0221%2F2%2F04%2Fp04004},
+  year = 2007,
+  month = {apr},
+  publisher = {{IOP} Publishing},
+  volume = {2},
+  number = {04},
+  pages = {P04004--P04004},
+  author = {Q Ingram},
+  title = {Energy resolution of the barrel of the {CMS} Electromagnetic Calorimeter},
+  journal = {Journal of Instrumentation},
+}
+@article{CMS:1997tfa,
+      title          = "{CMS: The hadron calorimeter technical design report}",
+      collaboration  = "CMS",
+      year           = "1997",
+      reportNumber   = "CERN-LHCC-97-31",
+      SLACcitation   = "%%CITATION = CERN-LHCC-97-31;%%"
+}
+@article{Yazgan_2009,
+  doi = {10.1088/1742-6596/160/1/012056},
+  url = {https://doi.org/10.1088%2F1742-6596%2F160%2F1%2F012056},
+  year = 2009,
+  month = {apr},
+  publisher = {{IOP} Publishing},
+  volume = {160},
+  pages = {012056},
+  author = {Efe Yazgan and the CMS ECAL/HCAL Collaborations},
+  title = {The {CMS} barrel calorimeter response to particle beams from 2 to 350 {GeV}/c},
+  journal = {Journal of Physics: Conference Series},
+}
+
+@article{Bentley1975MultidimensionalBS,
+  title={Multidimensional Binary Search Trees Used for Associative Searching},
+  author={Jon Louis Bentley},
+  journal={Commun. ACM},
+  year={1975},
+  volume={18},
+  pages={509-517}
+}
+@misc{CMSdatatier,
+      collaboration = "CMS",
+      title         = "{Detector data flow through Hardware tiers}",
+      month         = "July",
+      year          = "2018",
+      howpublished  = "\url{https://twiki.cern.ch/twiki/bin/view/CMSPublic/WorkBookComputingModel}",
+}
+@article{CMS:2009nxa,
+      title          = "{Particle-Flow Event Reconstruction in CMS and
+                        Performance for Jets, Taus, and MET}",
+      collaboration  = "CMS",
+      year           = "2009",
+      reportNumber   = "CMS-PAS-PFT-09-001",
+      SLACcitation   = "%%CITATION = CMS-PAS-PFT-09-001;%%"
+}
+@Article{Cacciari:2008gp,
+     AUTHOR    = "Cacciari, Matteo and Salam, Gavin P. and Soyez, Gregory",
+     TITLE     = "{The anti-$k_t$ jet clustering algorithm}",
+     JOURNAL   = "JHEP",
+     VOLUME    = "04",
+     YEAR      = "2008",
+     PAGES     = "063",
+     doi       = "10.1088/1126-6708/2008/04/063",
+     eprint         = "0802.1189",
+     archivePrefix  = "arXiv",
+     primaryClass   = "hep-ex",
+}
+@article{Cacciari:2011ma,
+      author         = "Cacciari, Matteo and Salam, Gavin P. and Soyez, Gregory",
+      title          = "{FastJet user manual}",
+      journal        = "Eur. Phys. J. C",
+      volume         = "72",
+      pages          = "1896",
+      doi            = "10.1140/epjc/s10052-012-1896-2",
+      year           = "2012",
+      eprint         = "1111.6097",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ph",
+      reportNumber   = "CERN-PH-TH-2011-297",
+      SLACcitation   = "%%CITATION = ARXIV:1111.6097;%%",
+}
 
