More work on Chapter 4

--- a/data/myReference.bib
+++ b/data/myReference.bib
@@ -839,4 +839,103 @@ journal = {CERN/LHCC}
       reportNumber   = "CERN-PH-TH-2011-297",
       SLACcitation   = "%%CITATION = ARXIV:1111.6097;%%",
 }
+@Article{JINST2011,
+    author    = "{The CMS Collaboration}",
+    title     = "Determination of jet energy calibration and transverse momentum resolution in CMS",
+    journal   = "Journal of Instrumentation",
+    year      = "2011",
+    archivePrefix= "arXiv",
+    primaryClass = "physics.ins-det",
+    eprint       = "1107.4277v1",
+    note      = "http://iopscience.iop.org/1748-0221/6/11/P11002/",
+}
+@Article{Cacciari2007,
+    author    = "Matteo Cacciari and Gavin P. Salam",
+    title     = "Pileup subtraction using jet areas",
+    journal   = "Physics Letters B",
+    year      = "2008",
+    archivePrefix= "arXiv",
+    primaryClass = "hep-ph",
+    eprint       = "0707.1378v2",
+    url      = "http://arxiv.org/abs/0707.1378v2"
+}
+
+@techreport{CMS-AN-2010-003,
+      title         = "Particle Flow Jet Identification Criteria",
+      month         = "Jun",
+      year          = "2010",
+      author        = "N. Saoulidou",
+      institution   = "CERN",
+      address       = "Geneva",
+      number        = "CMS-AN-2010-003",
+      type          = "CMS Analysis Note",
+}
+
+@misc{PFJetID,
+      collaboration = "CMS",
+      title         = "Jet Identification",
+      year          = "2018",
+      howpublished  = "\url{https://twiki.cern.ch/twiki/bin/viewauth/CMS/JetID#Recommendations_for_13_TeV_2016}",
+}
+@misc{ wiki:btag,
+    author = "{Wikipedia contributors}",
+    title = "B-tagging --- {Wikipedia}{,} The Free Encyclopedia",
+    year = "2019",
+    url = "https://en.wikipedia.org/w/index.php?title=B-tagging&oldid=885936802",
+    note = "[Online; accessed 19-June-2019]"
+  }
+
+  @article{Sirunyan_2018,
+  doi = {10.1088/1748-0221/13/05/p05011},
+  url = {https://doi.org/10.1088%2F1748-0221%2F13%2F05%2Fp05011},
+  year = 2018,
+  month = {may},
+  publisher = {{IOP} Publishing},
+  volume = {13},
+  number = {05},
+  pages = {P05011--P05011},
+  author = {The CMS Collaboration},
+  title = {Identification of heavy-flavour jets with the {CMS} detector in pp collisions at 13 {TeV}},
+  journal = {Journal of Instrumentation},
+}
+@article{BTV-12-001,
+      author         = "Chatrchyan, Serguei and others",
+      title          = "{Identification of b-quark jets with the CMS experiment}",
+      collaboration  = "CMS",
+      journal        = "JINST",
+      volume         = "8",
+      pages          = "P04013",
+      doi            = "10.1088/1748-0221/8/04/P04013",
+      year           = "2013",
+      eprint         = "1211.4462",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ex",
+      reportNumber   = "CMS-BTV-12-001, CERN-PH-EP-2012-262",
+      SLACcitation   = "%%CITATION = ARXIV:1211.4462;%%",
+}
+@techreport{Weiser:927399,
+      author        = "Weiser, Christian",
+      title         = "{A Combined Secondary Vertex Based B-Tagging Algorithm in CMS}",
+      institution   = "CERN",
+      address       = "Geneva",
+      number        = "CMS-NOTE-2006-014",
+      month         = "Jan",
+      year          = "2006",
+      reportNumber  = "CMS-NOTE-2006-014",
+      url           = "http://cds.cern.ch/record/927399",
+}
+@article{PhysRevD.94.112002,
+  title = {Jet flavor classification in high-energy physics with deep neural networks},
+  author = {Guest, Daniel and Collado, Julian and Baldi, Pierre and Hsu, Shih-Chieh and Urban, Gregor and Whiteson, Daniel},
+  journal = {Phys. Rev. D},
+  volume = {94},
+  issue = {11},
+  pages = {112002},
+  numpages = {12},
+  year = {2016},
+  month = {Dec},
+  publisher = {American Physical Society},
+  doi = {10.1103/PhysRevD.94.112002},
+  url = {https://link.aps.org/doi/10.1103/PhysRevD.94.112002}
+}
 
