Made Section4 compile

--- a/TAMUTemplateSP18.tex
+++ b/TAMUTemplateSP18.tex
@@ -65,7 +65,30 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %Begin student defined packages.
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\usepackage{amssymb}
+\usepackage{subcaption}
+\usepackage{comment}
+\usepackage{standalone}
+\usepackage{mathtools}
+\usepackage{xcolor,colortbl}
+\definecolor{mygray}{gray}{0.7}
 
+%This is for sorting tables and displaying their content
+\usepackage{datatool}
+\usepackage{dataplot}
+\usepackage{datapie}
+\usepackage{databar}
+\usepackage{longtable}
+\usepackage{xtab}
+\renewcommand{\dtldisplaystarttab}{\hline}
+\renewcommand{\dtldisplayafterhead}{\\\hline}
+\renewcommand{\dtldisplayendtab}{\\\hline}
+\usepackage{multirow}
+\usepackage[utf8]{inputenc}
+
+%These are for the bibliography
+\usepackage{url}
+\usepackage{doi}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %End student defined packages.
